tests/negative/test_call_eval_dyn_scope.orb
eval (fnc foo () () {
    = a 0;
});

fnc main () () {
    eval (sym (a 0));
    foo;
};